Implement reading and checking the jwt token validity
